k8s-configs/service-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      serviceAccountName: sa-service-2
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: service-2
          image: znait/service-2:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
