k8s-configs/service-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  type: ClusterIP
  selector:
    app: service-1
  ports:
    - name: http
      port: 80
      targetPort: 5000
