k8s-configs/service-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: service-2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
